--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <title>reveal.js</title>
+    <title>MS Graph Intro</title>
 
     <link rel="stylesheet" href="reveal.js/dist/reset.css" />
     <link rel="stylesheet" href="reveal.js/dist/reveal.css" />
@@ -49,7 +49,7 @@
                  data-background-size="3%"
                  data-background-position="right 3% top 3%">
           <h1>Microsoft Graph Intro</h1>
-          <h4>The Essentials</h4>
+          <h4>work in progress</h4>
         </section>
         
         <section 
