--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </section>
         
         <section
-            data-background-image="./img/litec-logo-white-100px.svg"
+            data-background-image="./img/msgraph-logo.png"
             data-background-size="3%"
             data-background-position="right 3% top 3%"
                  
