--- a/HandsOn/mslearn-retrieve-m365-data-with-msgraph-quickstart/index.html
+++ b/HandsOn/mslearn-retrieve-m365-data-with-msgraph-quickstart/index.html
@@ -18,7 +18,12 @@
 <body>
   <main id="main-container" role="main" class="container">
     <div id="content" style="display: none;">
-      <h4>Welcome <span id="userName"></span></h4> 
+      <h4>Welcome <span id="userName"></span></h4>
+      <button onclick="displayEmail();" id="displayEmail">Show email</button>
+      <ul id="emails"></ul>
+      <div id="loadMoreContainer" style="display: none;">
+        <button onclick="displayEmail();">Load more</button>
+      </div>
       <div>
         <button id="showProfilePhoto" style="display:none" onclick="displayProfilePhoto();">Show profile picture</button>
       </div>
