feat: add file up/download to app

--- a/HandsOn/mslearn-retrieve-m365-data-with-msgraph-quickstart/index.html
+++ b/HandsOn/mslearn-retrieve-m365-data-with-msgraph-quickstart/index.html
@@ -19,6 +19,15 @@
   <main id="main-container" role="main" class="container">
     <div id="content" style="display: none;">
       <h4>Welcome <span id="userName"></span></h4>
+        <!-- Add for file download -->
+      <hr />
+      <label>Files in your OneDrive root folder:</label>
+      <ul id="downloadLinks"></ul>
+      <!-- Add for file upload -->
+      <hr />
+      <input type="file" onchange="fileSelected(this);" />
+      <div id="uploadMessage"></div>
+      <hr />
       <button onclick="displayEmail();" id="displayEmail">Show email</button>
       <ul id="emails"></ul>
       <div id="loadMoreContainer" style="display: none;">
@@ -32,6 +41,12 @@
     <a id="signin" onclick="displayUI(); return false;" href="#">
       <img src="./images/ms-symbollockup_signin_light.png" alt="Sign in with Microsoft" />
     </a>
+    <button id="btnShowEvents" style="display: none;" onclick="displayEvents();">Show events</button>
+    <div id="eventWrapper" style="display: none;">
+      <p>Your events retrieved from Microsoft Graph for the upcoming week:</p>
+      <ul id="events"></ul>
+    </div>
+    
   </main>
   <script src="https://alcdn.msauth.net/browser/2.1.0/js/msal-browser.min.js"
     integrity="sha384-EmYPwkfj+VVmL1brMS1h6jUztl4QMS8Qq8xlZNgIT/luzg7MAzDVrRa2JxbNmk/e"
