feat: added graph PoSh

--- a/index.html
+++ b/index.html
@@ -81,7 +81,19 @@
             data-background-size="3%"
             data-background-position="right 3% top 3%"
                 
-            data-markdown="02-JSAppXrcs.md"
+            data-markdown="02-MSGraphPosh.md"
+            data-separator="^\r?\n-----\r?\n$"
+            data-separator-vertical="^\r?\n---\r?\n$"
+            data-separator-notes="^Note:"
+            data-charset="utf-8"> <!-- or "iso-8859-15" -->
+        </section>
+
+        <section
+            data-background-image="./img/msgraph-logo.png"
+            data-background-size="3%"
+            data-background-position="right 3% top 3%"
+                
+            data-markdown="03-JSAppXrcs.md"
             data-separator="^\r?\n-----\r?\n$"
             data-separator-vertical="^\r?\n---\r?\n$"
             data-separator-notes="^Note:"
